added tasks in database

--- a/blog_project/templates/base.html
+++ b/blog_project/templates/base.html
@@ -11,18 +11,18 @@
 </head>
 <body>
     <!--Navbar-->
-    <nav class="navbar navbar-expand-lg bg-success fixed-top">
+    <nav class="navbar navbar-expand-lg bg-dark fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">To_do_list</a>
+            <a class="navbar-brand text-white" href="#">To_do_list</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    <a class="nav-link" href="#">Add</a>
-                    <a class="nav-link" href="#">Pricing</a>
-                    <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                    <a class="nav-link active text-white" aria-current="page" href="http://127.0.0.1:8000/todolists/main/">Home</a>
+                    <a class="nav-link text-white" href="http://127.0.0.1:8000/todolists/add/">Add</a>
+                    <a class="nav-link text-white" href="#">Pricing</a>
+                    <a class="nav-link disabled text-white" aria-disabled="true">Disabled</a>
                 </div>
             </div>
         </div>
