show bool to Yes/No

--- a/blog_project/to_do_lists/templates/to_do_lists/main.html
+++ b/blog_project/to_do_lists/templates/to_do_lists/main.html
@@ -26,8 +26,8 @@
                     {%else%}
                         <td class = 'fw-bold text-danger'>No</td>
                     {%endif%}
-                    <td><input class="btn btn-success" type="submit" value="Submit"></td>
-                    <td><input class="btn btn-danger" type="remove" value="Remove"></td>
+                    <td><input class="btn btn-success" type="submit"  value="Submit"></td>
+                    <td><input class="btn btn-danger" type="button" value="Remove"></td>
                 </tr>
                 {%endfor%}
             </tbody>
