--- a/blog_project/to_do_lists/templates/to_do_lists/change.html
+++ b/blog_project/to_do_lists/templates/to_do_lists/change.html
@@ -1,5 +1,5 @@
 {%extends 'base.html'%}
-{% block title %}<title>Add</title>{% endblock title %}
+{% block title %}<title>Change</title>{% endblock title %}
 {%block content%}
 <div class="container-fluid">
     <div class="row justify-content-center ps-5">
