--- a/blog_project/to_do_lists/templates/to_do_lists/change.html
+++ b/blog_project/to_do_lists/templates/to_do_lists/change.html
@@ -3,11 +3,11 @@
 {%block content%}
 <div class="container-fluid">
     <div class="row justify-content-center ps-5">
-        <h1>Add Task</h1>
+        <h1>Change Task</h1>
         <form action="" method="post">
             {%csrf_token%}
             {{form.as_p}}
-            <input type="submit" value="submit">
+            <input class="btn btn-success" type="submit" value="submit">
         </form>
     </div>
     </div>
