--- a/blog_project/to_do_lists/templates/to_do_lists/delete.html
+++ b/blog_project/to_do_lists/templates/to_do_lists/delete.html
@@ -1,13 +1,13 @@
 {%extends 'base.html'%}
-{% block title %}<title>Add</title>{% endblock title %}
+{% block title %}<title>Delete</title>{% endblock title %}
 {%block content%}
 <div class="container-fluid">
     <div class="row justify-content-center ps-5">
-        <h1>Add Task</h1>
+        <h1>Delete Task</h1>
         <form action="" method="post">
             {%csrf_token%}
             {{form.as_p}}
-            <input class="btn btn-success" type="submit" value="submit">
+            <input class="btn btn-danger" type="submit" value="delete">
         </form>
     </div>
     </div>
